TERMINAL BASED NEWS SUMMARIZER MODULE 1 COMPLETE